Created main page and added favicon

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="Favicon.png">
+
 </head>
 <body>
-   
+   <nav>
+        <a href="main.htm">Home</a>
+        <a href="index.html">Sign up</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        
+    </nav>
     <div class="container">
         <div class="form_box active" id="login-form">
             <form action="">
