--- a/main.htm
+++ b/main.htm
@@ -26,7 +26,7 @@
     <div class="hero-content">
       <h2>Train AI Remotely at Your Own Schedule</h2>
       <p>Help improve artificial intelligence systems from anywhere, anytime.</p>
-      <button class="btn">Start Now!</button>
+      <a class="btn" href="types.html">Start now!</a>
     </div>
   </main>
 
