Overhaul website structure and add new features

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-  <header class="navbar">
-    <div class="logo">
-      <img src="Favicon.png" alt="Logo">
-      <h1>Data Annotation</h1>
+ <header class="navbar">
+  <a href="index.html" class="logo">
+    <img src="Favicon.png" alt="Logo">
+    <h1>Data Annotation</h1>
     </div>
     <nav>
-      <a href="main.htm">Home</a>
-      <a href="index.html">Sign up</a>
+      <a href="index.html">Home</a>
+      <a href="signup.php">Sign up</a>
       <a href="about.html">About</a>
-      <a href="contact.htm">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
