--- a/types.html
+++ b/types.html
@@ -9,48 +9,47 @@
 </head>
 <body>
 
-  <header class="navbar">
-    <div class="logo">
-      <img src="Favicon.png" alt="Logo">
-      <h1>Data Annotation</h1>
+ <header class="navbar">
+  <a href="index.html" class="logo">
+    <img src="Favicon.png" alt="Logo">
+    <h1>Data Annotation</h1>
     </div>
     <nav>
-      <a href="main.htm">Home</a>
-      <a href="index.html">Sign up</a>
+      <a href="index.html">Home</a>
+      <a href="signup.php">Sign up</a>
       <a href="about.html">About</a>
-      <a href="contact.htm">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
- <main class="types-wrapper">
-  <section class="types">
-    <h2>Select a Question Type</h2>
-    <p class="subtitle">Choose the kind of questions you want to answer.</p>
+  <main class="types-wrapper">
+    <section class="types">
+      <h2>Select a Question Type</h2>
+      <p class="subtitle">Choose the kind of questions you want to answer.</p>
 
-    <div class="types-grid">
-      <a class="type-card" href="#">
-        <h3>True / False</h3>
-        <p>Answer with True or False.</p>
-      </a>
+      <div class="types-grid">
+        <a class="type-card" href="tf_questions.php">
+          <h3>True / False</h3>
+          <p>Answer with True or False.</p>
+        </a>
 
-      <a class="type-card" href="#">
-        <h3>Multiple Choice</h3>
-        <p>Choose one correct option.</p>
-      </a>
+        <a class="type-card" href="mcq_questions.php">
+          <h3>Multiple Choice</h3>
+          <p>Choose one correct option.</p>
+        </a>
 
-      <a class="type-card" href="#">
-        <h3>Open Question</h3>
-        <p>Write your own answer.</p>
-      </a>
+        <a class="type-card" href="open_questions.php">
+          <h3>Open Question</h3>
+          <p>Write your own answer.</p>
+        </a>
 
-      <a class="type-card" href="#">
-        <h3>List</h3>
-        <p>Provide a short list of items.</p>
-      </a>
-    </div>
-  </section>
-</main>
-
+        <a class="type-card" href="list_questions.php">
+          <h3>List</h3>
+          <p>Provide a short list of items.</p>
+        </a>
+      </div>
+    </section>
+  </main>
 
   <footer>
     <p>© 2025 Data Annotation</p>
