--- a/types.html
+++ b/types.html
@@ -12,7 +12,7 @@
  <header class="navbar">
   <a href="index.html" class="logo">
     <img src="Favicon.png" alt="Logo">
-     <h1>Data Annotation</h1>
+    <h1>Data Annotation</h1>
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -26,10 +26,33 @@
     <section class="types">
       <h2>Select a Question Type</h2>
       <p class="subtitle">Choose the kind of questions you want to answer.</p>
+
+      <div class="types-grid">
+        <a class="type-card" href="tf_questions.php">
+          <h3>True / False</h3>
+          <p>Answer with True or False.</p>
+        </a>
+
+        <a class="type-card" href="mcq_questions.php">
+          <h3>Multiple Choice</h3>
+          <p>Choose one correct option.</p>
+        </a>
+
+        <a class="type-card" href="open_questions.php">
+          <h3>Open Question</h3>
+          <p>Write your own answer.</p>
+        </a>
+
+        <a class="type-card" href="list_questions.php">
+          <h3>List</h3>
+          <p>Provide a short list of items.</p>
+        </a>
+      </div>
+    </section>
   </main>
 
   <footer>
-    <p>© 2025 Data Annotation </p>
+    <p>© 2025 Data Annotation</p>
   </footer>
 </body>
 </html>
