--- a/index.html
+++ b/index.html
@@ -1,53 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Data Annotation</title>
-  <link rel="icon" type="image/png" href="Favicon.png">
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>questions</title>
+    
 </head>
 <body>
-
- <header class="navbar">
-  <a href="index.html" class="logo">
-    <img src="Favicon.png" alt="Logo">
-     <h1>Data Annotation</h1>
+    <div class="card">
+        <label for="project_card">Project One</label>
+        <p >Type of question is western</p>
+        <form action="first.php" method="post" id="project_card" name="">
+            <input type="submit" value="Go" name="bt1" id="bt1">
+            <input type="hidden" value="Western" name="type">
+        </form>
     </div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="signup.php">Sign up</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <main class="hero">
-    <div class="hero-content">
-      <h2>Train AI Remotely at Your Own Schedule</h2>
-      <p>Help improve artificial intelligence systems from anywhere, anytime.</p>
-      <a class="btn" href="types.html">Start now!</a>
-    </div>
-  </main>
-
-  <section class="features">
-    <div class="feature">
-      <h3>Flexible Questions</h3>
-      <p>Choose the questions that fit your preferences and skills.</p>
-    </div>
-    <div class="feature">
-      <h3>Impactful Contribution</h3>
-      <p>Your annotations help train AI models used in real-world applications.</p>
-    </div>
-    <div class="feature">
-      <h3>Made by UQU Students</h3>
-      <p>This project was developed by passionate Computer Science students.</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>© 2025 Data Annotation</p>
-  </footer>
-
 </body>
 </html>
