--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="hero-content">
       <h2>Train AI Remotely at Your Own Schedule</h2>
       <p>Help improve artificial intelligence systems from anywhere, anytime.</p>
-      <a class="btn" href="types.html">Start now!</a>
+      <a class="btn" href="user_page.htm">Start now!</a>
     </div>
   </main>
 
@@ -44,7 +44,7 @@
       <p>This project was developed by passionate Computer Science students.</p>
     </div>
   </section>
-
+  
   <footer>
     <p>© 2025 Data Annotation</p>
   </footer>
