retuned the types htm and debugged some issues

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="hero-content">
       <h2>Train AI Remotely at Your Own Schedule</h2>
       <p>Help improve artificial intelligence systems from anywhere, anytime.</p>
-      <a class="btn" href="user_page.htm">Start now!</a>
+      <a class="btn" href="user_page.php">Start now!</a>
     </div>
   </main>
 
