--- a/types.html
+++ b/types.html
@@ -25,7 +25,7 @@
   <main class="types-wrapper">
     <section class="types">
       <h2>Select a Region</h2>
-      <p class="subtitle">Each card contains questions from Qs.json based on its region type.</p>
+      <p class="subtitle">Each card contains questions based on its region type.</p>
 
       <div class="types-grid">
 
