--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>تواصل معنا | لهجتنا</title>
+  <link rel="icon" type="image/png" href="../assets/Favicon.png">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    contact page
+
+  <header class="navbar">
+    <a href="../pages/index.html" style="text-decoration: none;">
+      <div class="logo">
+        <img src="../assets/images/Favicon.png" alt="شعار لهجتنا">
+        <div class="logo-text">
+          <h1 class="site-title">لهجتنا</h1>
+          <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
+        </div>
+      </div>
+    </a>
+
+    <nav>
+      <a href="../pages/index.html">الرئيسية</a>
+      <a href="../auth/auth.php">تسجيل / دخول</a>
+      <a href="../pages/about.html">عن الموقع</a>
+      <a href="../pages/contact.html">تواصل معنا</a>
+    </nav>
+  </header>
+
+  <main class="contact-page">
+    <section class="contact-hero">
+      <h2>تواصل معنا</h2>
+      <p>
+        عندك استفسار، اقتراح، ملاحظة أو حبّيت تتواصل معنا بخصوص موقع لهجتنا؟
+        أرسل لنا وسنرد عليك في أقرب وقت ممكن.
+      </p>
+    </section>
+
+    <section class="contact-content">
+      <!-- معلومات التواصل -->
+      <div class="contact-card">
+        <h3>معلومات التواصل</h3>
+        <p class="contact-note">عدّل بيانات التواصل هنا بالمعلومات الحقيقية الخاصة فيك.</p>
+
+        <ul class="contact-list">
+          <li>
+            <span class="contact-label">البريد الإلكتروني:</span>
+            <span class="contact-value">s445002957@st.uqu.sa</span>
+          </li>
+          <li>
+            <span class="contact-label">رقم التواصل (واتساب):</span>
+            <span class="contact-value">0543605668</span>
+          </li>
+        </ul>
+      </div>
+
+      <!-- نموذج مراسلة (بدون باك إند) -->
+      <div class="contact-form-card">
+        <h3>أرسل لنا رسالة</h3>
+        <form>
+          <div class="form-group">
+            <label for="name">الاسم</label>
+            <input type="text" id="name" placeholder="اكتب اسمك">
+          </div>
+
+          <div class="form-group">
+            <label for="email">البريد الإلكتروني</label>
+            <input type="email" id="email" placeholder="your@email.com">
+          </div>
+
+          <div class="form-group">
+            <label for="message">الرسالة</label>
+            <textarea id="message" rows="4" placeholder="اكتب رسالتك هنا"></textarea>
+          </div>
+
+          <button type="button" class="btn btn-main">إرسال</button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 لهجتنا</p>
+  </footer>
+
 </body>
 </html>
