Update link in index.html to correct path

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         جاوب على أسئلة عن المصطلحات الشعبية، العادات، اللهجات، والتعابير 
         المستخدمة في مناطق المملكة المختلفة، وشوف قد إيش تعرف عن ثقافتنا السعودية.
       </p>
-      <a class="btn" href="../auth/auth.php">ابدأ الاختبار الآن</a>
+      <a class="btn" href="auth.php">ابدأ الاختبار الآن</a>
     </div>
   </main>
 
