Change website content from Arabic to English

--- a/index.html
+++ b/index.html
@@ -1,70 +1,52 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>اختبر معرفتك بثقافة وتراث مناطق المملكة</title>
+  <title>Data Annotation</title>
   <link rel="icon" type="image/png" href="Favicon.png">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <header class="navbar">
-  <a href="index.html" style="text-decoration: none;">
-    <div class="logo">
-      <img src="Favicon.png" alt="شعار لهجتنا">
-      <div class="logo-text">
-        <h1 class="site-title">لهجتنا</h1>
-        <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
-      </div>
+ <header class="navbar">
+  <a href="index.html" class="logo">
+    <img src="Favicon.png" alt="Logo">
+     <h1>Data Annotation</h1>
     </div>
-  </a>
-
     <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="auth.php">تسجيل / دخول</a>
-      <a href="about.html">عن الموقع</a>
-      <a href="contact.html">تواصل معنا</a>
+      <a href="index.html">Home</a>
+      <a href="signup.php">Sign up</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main class="hero">
     <div class="hero-content">
-      <h2>اختبر معرفتك بلهجات وثقافة وتراث مناطق المملكة</h2>
-      <p>
-        جاوب على أسئلة عن المصطلحات الشعبية، العادات، اللهجات، والتعابير 
-        المستخدمة في مناطق المملكة المختلفة، وشوف قد إيش تعرف عن ثقافتنا السعودية.
-      </p>
-      <a class="btn" href="auth.php">ابدأ الاختبار الآن</a>
+      <h2>Train AI Remotely at Your Own Schedule</h2>
+      <p>Help improve artificial intelligence systems from anywhere, anytime.</p>
+      <a class="btn" href="user_page.php">Start now!</a>
     </div>
   </main>
 
   <section class="features">
     <div class="feature">
-      <h3>أسئلة حسب المنطقة</h3>
-      <p>
-        أسئلة مبنية على لهجات ومصطلحات من الوسطى، الغربية، الشرقية، 
-        الجنوبية، الشمالية، بالإضافة إلى تعابير عامة منتشرة في أغلب المناطق.
-      </p>
+      <h3>Flexible Questions</h3>
+      <p>Choose the questions that fit your preferences and skills.</p>
     </div>
     <div class="feature">
-      <h3>مصطلحات من الواقع السعودي</h3>
-      <p>
-        كل سؤال مبني على كلمة أو تعبير شعبي حقيقي، مع معنى الكلمة 
-        وسياق استخدامها الثقافي في المجتمع السعودي.
-      </p>
+      <h3>Impactful Contribution</h3>
+      <p>Your annotations help train AI models used in real-world applications.</p>
     </div>
     <div class="feature">
-      <h3>مشروع طلابي من جامعة أم القرى</h3>
-      <p>
-        هذا الموقع طُوِّر بواسطة طلاب علوم الحاسب بجامعة أم القرى 
-        بهدف تقديم تجربة تفاعلية ممتعة لاختبار المعرفة بالتراث والثقافة السعودية.
-      </p>
+      <h3>Made by UQU Students</h3>
+      <p>This project was developed by passionate Computer Science students.</p>
     </div>
   </section>
-
+  
   <footer>
-    <p>© 2025 لهجتنا</p>
+    <p>© 2025 Data Annotation</p>
   </footer>
 
 </body>
