--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </a>
     <nav>
       <a href="index.html">الرئيسية</a>
-      <a href="signup.php">تسجيل / دخول</a>   <!-- هنا التعديل المهم -->
+      <a href="signup.php">تسجيل / دخول</a>   
       <a href="about.html">عن الموقع</a>
       <a href="contact.html">تواصل معنا</a>
     </nav>
