Fix comment syntax in contact.html

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
       </div>
 
       <!-- نموذج مراسلة (بدون باك إند) -->
-      <div class="contact-form-card">
+     <!--- <div class="contact-form-card">
         <h3>أرسل لنا رسالة</h3>
         <form>
           <div class="form-group">
@@ -73,7 +73,7 @@
 
           <button type="button" class="btn btn-main">إرسال</button>
         </form>
-      </div>
+      </div>--->
     </section>
   </main>
 
