--- a/contact.html
+++ b/contact.html
@@ -25,57 +25,14 @@
     </nav>
   </header>
 
- <main class="contact-page">
-    <section class="contact-hero">
+ <main class="hero">
+    <div class="hero-content">
       <h2>تواصل معنا</h2>
-      <p>
-        عندك استفسار، اقتراح، ملاحظة أو حبّيت تتواصل معنا بخصوص موقع لهجتنا؟
-        أرسل لنا وسنرد عليك في أقرب وقت ممكن.
-      </p>
-    </section>
-
-    <section class="contact-content">
-      <!-- معلومات التواصل -->
-      <div class="contact-card">
-        <h3>معلومات التواصل</h3>
-        <p class="contact-note">عدّل بيانات التواصل هنا بالمعلومات الحقيقية الخاصة فيك.</p>
-
-        <ul class="contact-list">
-          <li>
-            <span class="contact-label">البريد الإلكتروني:</span>
-            <span class="contact-value">s445002957@uqu.edu.sa</span>
-          </li>
-          <li>
-            <span class="contact-label">رقم التواصل (واتساب):</span>
-            <span class="contact-value">0543605668</span>
-          </li>
-        </ul>
-      </div>
-
-      <!-- نموذج مراسلة (بدون باك إند) -->
-     <!--- <div class="contact-form-card">
-        <h3>أرسل لنا رسالة</h3>
-        <form>
-          <div class="form-group">
-            <label for="name">الاسم</label>
-            <input type="text" id="name" placeholder="اكتب اسمك">
-          </div>
-
-          <div class="form-group">
-            <label for="email">البريد الإلكتروني</label>
-            <input type="email" id="email" placeholder="your@email.com">
-          </div>
-
-          <div class="form-group">
-            <label for="message">الرسالة</label>
-            <textarea id="message" rows="4" placeholder="اكتب رسالتك هنا"></textarea>
-          </div>
-
-          <button type="button" class="btn btn-main">إرسال</button>
-        </form>
-      </div>--->
-    </section>
+      <p>لأي استفسارات حول المنصة أو المشروع، يرجى التواصل عبر البريد الإلكتروني.</p>
+      <p><strong>Email:</strong> s445002957@uqu.edu.sa</p>
+    </div>
   </main>
+
 
   <footer>
     <p>© 2025 لهجتنا</p>
