Refactor header and update navigation links

--- a/about.html
+++ b/about.html
@@ -10,16 +10,19 @@
 <body>
 
   <header class="navbar">
-  <a href="index.html" class="logo" style="text-decoration: none;">
-      <img src="Favicon.png" alt="شعار لهجتنا">
-      <div class="logo-text">
-        <h1 class="site-title">لهجتنا</h1>
-        <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
+    <a href="index.html" style="text-decoration: none;">
+      <div class="logo">
+        <img src="Favicon.png" alt="شعار لهجتنا">
+        <div class="logo-text">
+          <h1 class="site-title">لهجتنا</h1>
+          <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
+        </div>
       </div>
     </a>
+
     <nav>
       <a href="index.html">الرئيسية</a>
-      <a href="signup.php">تسجيل / دخول</a>
+      <a href="auth.php">تسجيل / دخول</a>
       <a href="about.html">عن الموقع</a>
       <a href="contact.html">تواصل معنا</a>
     </nav>
