--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
     <nav>
       <a href="index.html">الرئيسية</a>
-      <a href="auth.php">تسجيل / دخول</a>
+      <a href="signup.php">تسجيل / دخول</a>
       <a href="about.html">عن الموقع</a>
       <a href="contact.html">تواصل معنا</a>
     </nav>
