--- a/contact.html
+++ b/contact.html
@@ -1,87 +1,78 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تواصل معنا | لهجتنا</title>
   <link rel="icon" type="image/png" href="Favicon.png">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <header class="navbar">
-    <a href="index.html" style="text-decoration: none;">
-      <div class="logo">
-        <img src="Favicon.png" alt="شعار لهجتنا">
-        <div class="logo-text">
+<header class="navbar">
+  <a href="index.html" class="logo" style="text-decoration:none;">
+      <img src="Favicon.png" alt="شعار لهجتنا">
+      <div class="logo-text">
           <h1 class="site-title">لهجتنا</h1>
           <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
-        </div>
       </div>
-    </a>
+  </a>
 
-    <nav>
+  <nav>
       <a href="index.html">الرئيسية</a>
       <a href="signup.php">تسجيل / دخول</a>
       <a href="about.html">عن الموقع</a>
       <a href="contact.html">تواصل معنا</a>
-    </nav>
-  </header>
+  </nav>
+</header>
 
-  <main class="contact-page">
-    <section class="contact-hero">
-      <h2>تواصل معنا</h2>
-      <p>
-        عندك استفسار، اقتراح، ملاحظة أو حاب تتواصل معنا بخصوص موقع لهجتنا؟
-        أرسل لنا وسنرد عليك في أقرب وقت ممكن.
-      </p>
-    </section>
+<main class="contact-page">
 
-    <section class="contact-content">
-      <!-- معلومات التواصل -->
-      <div class="contact-card">
-        <h3>معلومات التواصل</h3>
-        <p class="contact-note">تقدر تعدّل بيانات التواصل هنا بالمعلومات الحقيقية الخاصة فيك.</p>
+  <h2 class="page-title">تواصل معنا</h2>
+  <p class="page-subtitle">
+    عندك استفسار، اقتراح، ملاحظة؟ أرسل لنا وسنرد عليك في أقرب وقت.
+  </p>
 
-        <ul class="contact-list">
-          <li>
-            <span class="contact-label">البريد الإلكتروني:</span>
-            <span class="contact-value">s445002957@st.uqu.sa</span>
-          </li>
-          <li>
-            <span class="contact-label">رقم التواصل (واتساب):</span>
-            <span class="contact-value">0543605668</span>
-          </li>
-        </ul>
+  <!-- كرت معلومات التواصل -->
+  <div class="contact-card">
+      <h3 class="card-title">معلومات التواصل</h3>
+      <p class="contact-desc">تقدر تعدّل بيانات التواصل هذه بالمعلومات الحقيقية الخاصة فيك.</p>
+
+      <div class="contact-line">
+          <span class="label">البريد الإلكتروني:</span>
+          <span class="value">s445002957@st.uqu.sa</span>
       </div>
 
-      <div class="contact-form-card">
-        <h3>أرسل لنا رسالة</h3>
-        <form>
-          <div class="form-group">
-            <label for="name">الاسم</label>
-            <input type="text" id="name" placeholder="اكتب اسمك">
-          </div>
-
-          <div class="form-group">
-            <label for="email">البريد الإلكتروني</label>
-            <input type="email" id="email" placeholder="you@example.com">
-          </div>
-
-          <div class="form-group">
-            <label for="message">الرسالة</label>
-            <textarea id="message" rows="4" placeholder="اكتب رسالتك هنا"></textarea>
-          </div>
-
-          <button type="button" class="btn btn-main">إرسال</button>
-        </form>
+      <div class="contact-line">
+          <span class="label">رقم التواصل (واتساب):</span>
+          <span class="value">0543605668</span>
       </div>
-    </section>
-  </main>
+  </div>
 
-  <footer>
-    <p>© 2025 لهجتنا</p>
-  </footer>
+  <!-- كرت الفورم -->
+  <div class="contact-card">
+      <h3 class="card-title">أرسل لنا رسالة</h3>
+
+      <form>
+          <label class="input-label">الاسم</label>
+          <input type="text" class="input" placeholder="اكتب اسمك">
+
+          <label class="input-label">البريد الإلكتروني</label>
+          <input type="email" class="input" placeholder="your@example.com">
+
+          <label class="input-label">الرسالة</label>
+          <textarea rows="4" class="textarea" placeholder="اكتب رسالتك هنا"></textarea>
+
+          <button type="button" class="btn-main">إرسال</button>
+      </form>
+  </div>
+
+</main>
+
+<footer>
+  © 2025 لهجتنا
+</footer>
 
 </body>
 </html>
