--- a/about.html
+++ b/about.html
@@ -24,15 +24,18 @@
       </div>
     </a>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="signup.php">Sign up</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="index.html">الرئيسية</a>
-      <a href="signup.php">تسجيل / دخول</a>
-      <a href="about.html">عن الموقع</a>
-      <a href="contact.html">تواصل معنا</a>
-    </nav>
+  <a href="index.html">الرئيسية</a>
+
+  <span class="auth-links">
+    <a href="signup.php?form=register">تسجيل</a>
+    <span class="divider">/</span>
+    <a href="signup.php?form=login">دخول</a>
+  </span>
+
+  <a href="about.html">عن الموقع</a>
+  <a href="contact.html">تواصل معنا</a>
+</nav>
+
   </header>
 
   <main class="about-page-main">
