--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,19 @@
       </div>
   </a>
 
-  <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="signup.php">تسجيل / دخول</a>
-      <a href="about.html">عن الموقع</a>
-      <a href="contact.html">تواصل معنا</a>
-  </nav>
+ <nav>
+  <a href="index.html">الرئيسية</a>
+
+  <span class="auth-links">
+    <a href="signup.php?form=register">تسجيل</a>
+    <span class="divider">/</span>
+    <a href="signup.php?form=login">دخول</a>
+  </span>
+
+  <a href="about.html">عن الموقع</a>
+  <a href="contact.html">تواصل معنا</a>
+</nav>
+
 </header>
 
 <main class="contact-page">
