--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>لهجتنا | اختبر معرفتك بثقافة وتراث مناطق المملكة</title>
   <link rel="icon" type="image/png" href="../assets/images/Favicon.png">
-  <link rel="stylesheet" href="/htdocs/src/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
