--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>لهجتنا | اختبر معرفتك بثقافة وتراث مناطق المملكة</title>
-  <link rel="icon" type="image/png" href="../assets/images/Favicon.png">
+  <link rel="icon" type="image/png" href="../src/assets/images/Favicon.png">
   <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
