Update links to point to src/pages directory

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="navbar">
     <a href="index.html" class="logo" style="text-decoration: none;">
-      <img src="../assets/images/Favicon.png" alt="شعار لهجتنا">
+      <img src="../src/assets/images/Favicon.png" alt="شعار لهجتنا">
       <div class="logo-text">
         <h1 class="site-title">لهجتنا</h1>
         <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
@@ -21,13 +21,13 @@
       <a href="index.html">الرئيسية</a>
 
       <span class="auth-links">
-        <a href="signup.php?form=register">تسجيل</a>
+        <a href="src/pages/signup.php?form=register">تسجيل</a>
         <span class="divider">/</span>
-        <a href="signup.php?form=login">دخول</a>
+        <a href="src/pages/signup.php?form=login">دخول</a>
       </span>
 
-      <a href="about.html">عن الموقع</a>
-      <a href="contact.html">تواصل معنا</a>
+      <a href="src/pages/about.html">عن الموقع</a>
+      <a href="src/pages/contact.html">تواصل معنا</a>
     </nav>
   </header>
 
@@ -38,7 +38,7 @@
         جاوب على أسئلة عن المصطلحات الشعبية، التعابير، العادات، 
         ولهجات المناطق المختلفة في السعودية، واعرف قد إيش تعرف عن ثقافتنا.
       </p>
-      <a class="btn" href="signup.php">ابدأ الآن</a>
+      <a class="btn" href="src/pages/signup.php">ابدأ الآن</a>
     </div>
   </main>
 
