Update paths for favicon and stylesheets

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تواصل معنا | لهجتنا</title>
-  <link rel="icon" type="image/png" href="../assets/images/Favicon.png">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" type="image/png" href="../src/assets/images/Favicon.png">
+  <link rel="stylesheet" href="../src/css/style.css">
 </head>
 
 <body>
 
 <header class="navbar">
   <a href="index.html" class="logo" style="text-decoration:none;">
-      <img src="../assets/images/Favicon.png" alt="شعار لهجتنا">
+      <img src="../src/assets/images/Favicon.png" alt="شعار لهجتنا">
       <div class="logo-text">
           <h1 class="site-title">لهجتنا</h1>
            <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
@@ -24,13 +24,13 @@
       <a href="index.html">الرئيسية</a>
 
       <span class="auth-links">
-        <a href="signup.php?form=register">تسجيل</a>
+        <a href="src/pages/signup.php?form=register">تسجيل</a>
         <span class="divider">/</span>
-        <a href="signup.php?form=login">دخول</a>
+        <a href="src/pages/signup.php?form=login">دخول</a>
       </span>
 
-      <a href="about.html">عن الموقع</a>
-      <a href="contact.html">تواصل معنا</a>
+      <a href="src/pages/about.html">عن الموقع</a>
+      <a href="src/pages/contact.html">تواصل معنا</a>
     </nav>
 
 </header>
