Fix links to favicon and stylesheet in about.html

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us | Data Annotation</title>
   <title>عن لهجتنا | اختبر معرفتك بثقافة وتراث مناطق المملكة</title>
-  <link rel="icon" type="image/png" href="src/assets/images/Favicon.png">
-  <link rel="stylesheet" href="src/css/style.css" />
+  <link rel="icon" type="image/png" href="src/assets/images">
+  <link rel="stylesheet" href="../src/css/style.css" />
 </head>
 <body>
 
