--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us | Data Annotation</title>
   <title>عن لهجتنا | اختبر معرفتك بثقافة وتراث مناطق المملكة</title>
-  <link rel="icon" type="image/png" href="src/assets/images/Favicon.png">
-  <link rel="stylesheet" href="src/css/style.css" />
+  <link rel="icon" type="image/png" href="../src/assets/images/Favicon.png">
+  <link rel="stylesheet" href="../src/css/style.css" />
 </head>
 <body>
 
   <header class="navbar">
   <a href="index.html" class="logo">
-    <img src="src/assets/images/Favicon.png" alt="Logo">
+    <img src="../src/assets/images/Favicon.png" alt="Logo">
      <h1>Data Annotation</h1>
     </div>
   <a href="index.html" class="logo" style="text-decoration: none;">
-      <img src="src/assets/images/Favicon.png" alt="شعار لهجتنا">
+      <img src="../src/assets/images/Favicon.png" alt="شعار لهجتنا">
       <div class="logo-text">
         <h1 class="site-title">لهجتنا</h1>
         <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
