--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -12,28 +12,28 @@
 <body>
 
   <header class="navbar">
-  <a href="index.html" class="logo">
-    <img src="../src/assets/images/Favicon.png" alt="Logo">
+  <a href="../../index.html" class="logo">
+    <img src="../assets/images/Favicon.png" alt="Logo">
      <h1>Data Annotation</h1>
     </div>
-  <a href="index.html" class="logo" style="text-decoration: none;">
-      <img src="../src/assets/images/Favicon.png" alt="شعار لهجتنا">
+  <a href="../../index.html" class="logo" style="text-decoration: none;">
+      <img src="../assets/images/Favicon.png" alt="شعار لهجتنا">
       <div class="logo-text">
         <h1 class="site-title">لهجتنا</h1>
         <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
       </div>
     </a>
     <nav>
-      <a href="index.html">الرئيسية</a>
+      <a href="../../index.html">الرئيسية</a>
 
       <span class="auth-links">
-        <a href="src/pages/signup.php?form=register">تسجيل</a>
+        <a href="../pages/signup.php?form=register">تسجيل</a>
         <span class="divider">/</span>
-        <a href="src/pages/signup.php?form=login">دخول</a>
+        <a href="../pages/signup.php?form=login">دخول</a>
       </span>
 
-      <a href="src/pages/about.html">عن الموقع</a>
-      <a href="src/pages/contact.html">تواصل معنا</a>
+      <a href="about.html">عن الموقع</a>
+      <a href="contact.html">تواصل معنا</a>
     </nav>
 
   </header>
@@ -136,7 +136,7 @@
         ابدأ الآن واكتشف كم كلمة ومصطلح تعرف من لهجات وتراث مناطق المملكة، 
         وتعرّف على معانٍ جديدة في كل محاولة.
       </p>
-      <a href="index.html" class="btn">ابدأ الاختبار من الصفحة الرئيسية</a>
+      <a href="../../index.html" class="btn">ابدأ الاختبار من الصفحة الرئيسية</a>
     </div>
   </main>
 
