Fix links to signup and login pages

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -27,9 +27,9 @@
       <a href="../../index.html">الرئيسية</a>
 
       <span class="auth-links">
-        <a href="../pages/signup.php?form=register">تسجيل</a>
+        <a href="signup.php?form=register">تسجيل</a>
         <span class="divider">/</span>
-        <a href="../pages/signup.php?form=login">دخول</a>
+        <a href="signup.php?form=login">دخول</a>
       </span>
 
       <a href="about.html">عن الموقع</a>
