--- a/src/pages/admin/create_project.html
+++ b/src/pages/admin/create_project.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8">
-<title>Create Project</title>
-<link rel="stylesheet" href="../../css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title> إنشاء اختبار | لهجتنا</title>
+  <link rel="icon" type="image/png" href="Favicon.png">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-<h2>Create New Project</h2><br><br>
+<header class="navbar">
+  <a href="index.html" class="logo" style="text-decoration:none;">
+    <img src="Favicon.png" alt="logo">
+    <div class="logo-text">
+      <h1 class="site-title">لهجتنا</h1>
+      <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
+    </div>
+  </a>
+   <nav>
+    <a href="logout.php">تسجيل الخروج</a>
+  </nav>
+  </header>
+    
+<main class="types-wrapper">
+  <div class="admin-wrapper">
+      <h2>إنشاء اختبار جديد</h2> <br><br>
 <form method="post" class="card" action="create_card_admin_site.php">
-    <label>Project Name:<br><input type="text" name="card_name" required></label><br><br>
-    <label>Number of Users:<br><input type="number" name="number_of_users" min="1" max="30" required></label><br><br>
-    <label>Number of Questions:<br><input type="number" name="number_of_question" min="20" max="500" required></label><br><br>
+    <label>اسم الاختبار:<br><input type="text" name="card_name" required></label><br><br>
+    <label>عدد المستخدمين:<br><input type="number" name="number_of_users" min="1" max="30" required></label><br><br>
+    <label>عدد الأسئلة:<br><input type="number" name="number_of_question" min="20" max="500" required></label><br><br>
 
-    <label>Dialect Type (Filter Questions):</label>
+    <label>نوع اللهجة:</label>
         <select name="dialect_type" required>
-            <option value="" disabled selected>-- Select Dialect --</option>
+            <option value="" disabled selected>-- اختر اللهجة --</option>
             <option value="all">Mixed (Random from all)</option>
             <option value="General">General</option>
             <option value="Southern">Southern</option>
@@ -25,9 +41,13 @@
             <option value="Western">Western</option>
         </select>
     
-    <button class="button" name="create_card" type="submit">Create Project</button>
+    <button class="view-btn" name="create_card" type="submit">إنشاء الاختبار</button>
     <a class="button secondary" href="admin_page.php" style="text-align:center; display:block; margin-top:10px; background:#ccc;">Cancel</a>
 </form>
 </div>
+</main>
+<footer>
+  <p>© 2025 لهجتنا</p>
+</footer>
 </body>
 </html>
