--- a/src/pages/admin/create_project.html
+++ b/src/pages/admin/create_project.html
@@ -42,7 +42,7 @@
         </select>
     
     <button class="view-btn" name="create_card" type="submit">إنشاء الاختبار</button>
-    <a class="button secondary" href="admin_page.php" style="text-align:center; display:block; margin-top:10px; background:#ccc;">Cancel</a>
+    <a class="button secondary" href="admin_page.php" style="text-align:center;border-radius: 8px; display:block; margin-top:10px; background:#ccc;">Cancel</a>
 </form>
 </div>
 </main>
