--- a/src/pages/admin/create_project.html
+++ b/src/pages/admin/create_project.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+  
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,10 +8,11 @@
   <link rel="icon" type="image/png" href="../../assets/images/Favicon.png">
 <link rel="stylesheet" href="../../css/style.css" />
 </head>
+  
 <body>
 <header class="navbar">
   <a href="index.html" class="logo" style="text-decoration:none;">
-    <img src="Favicon.png" alt="logo">
+    <img src="../../assets/images/Favicon.png" alt="شعار لهجتنا">
     <div class="logo-text">
       <h1 class="site-title">لهجتنا</h1>
       <p class="site-tagline">اختبر معرفتك بثقافة وتراث مناطق المملكة</p>
