Fix logout link in create_project.html

--- a/src/pages/admin/create_project.html
+++ b/src/pages/admin/create_project.html
@@ -19,7 +19,7 @@
     </div>
   </a>
    <nav>
-    <a href="../../auth/logout.phplogout.php">تسجيل الخروج</a>
+    <a href="../../auth/logout.php">تسجيل الخروج</a>
   </nav>
   </header>
     
