--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
       <a href="src/pages/about.html">عن الموقع</a>
       <a href="src/pages/contact.html">تواصل معنا</a>
+      <button id="theme-toggle" class="theme-btn">🌙</button>
+
     </nav>
   </header>
 
