--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -106,7 +106,7 @@
         ابدأ الآن واكتشف كم كلمة ومصطلح تعرف من لهجات وتراث مناطق المملكة،
         وتعرّف على معانٍ جديدة في كل محاولة.
       </p>
-      <a href="../../index.html" class="btn">ابدأ الاختبار من الصفحة الرئيسية</a>
+      <a href="../../index.html" class="btn">ابدأ الاختبار</a>
     </section>
 
   </main>
