--- a/وضاح/final test/index.html
+++ b/وضاح/final test/index.html
@@ -36,7 +36,7 @@
       <p>Choose the questions that fit your preferences and skills.</p>
     </div>
     <div class="feature">
-      <h3>Impactful Contribution</h3>
+      <h3>Impddddddddddddddddddddddddactful Contribution</h3>
       <p>Your annotations help train AI models used in real-world applications.</p>
     </div>
     <div class="feature">
