--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -30,6 +30,7 @@
     </span>
     <a href="about.html">عن الموقع</a>
     <a href="contact.html">تواصل معنا</a>
+   <a href="prayer.html">اوقات الصلاة</a>
   </nav>
 
 </header>
